--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header class="topbar">
     <div class="brand">
-      <div class="logo">WS</div>
+      <div class="logo">ТБ</div>
       <div class="brand-text">
         <div class="title">Т-банк</div>
         <div class="subtitle">Ваш мобильный банк</div>
